Fix menu button showing up on mobile view

--- a/styles.css
+++ b/styles.css
@@ -631,6 +631,7 @@ main {
 }
 
 .invisible-btn {
+  background-color: transparent !important;
   color: transparent;
   border-color: transparent;
   cursor: default;
